<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/content_toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.viewOrder.ViewOrderActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                style="@style/AppTheme.Text.14PrimaryBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/order_details" />

            <TextView
                android:id="@+id/textView6"
                style="@style/AppTheme.Text.12Secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/order_id" />

            <TextView
                android:id="@+id/tvOrderIdOrder"
                style="@style/AppTheme.Text.14Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                tools:text="5503f6ffe8" />

            <TextView
                android:id="@+id/textView8"
                style="@style/AppTheme.Text.12Secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/order_status" />

            <TextView
                android:id="@+id/tvOrderStatusOrder"
                style="@style/AppTheme.Text.14Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                tools:text="Pending" />

            <TextView
                android:id="@+id/textView10"
                style="@style/AppTheme.Text.12Secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/order_date" />

            <TextView
                android:id="@+id/tvOrderDateOrder"
                style="@style/AppTheme.Text.14Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                tools:text="12:20 PM, 11 April" />

            <TextView
                style="@style/AppTheme.Text.12Secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/delivery_address" />

            <TextView
                android:id="@+id/tvOrderAddressOrder"
                style="@style/AppTheme.Text.14Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                tools:text="Unnamed Road, Nairobi" />

            <TextView
                android:id="@+id/textView13"
                style="@style/AppTheme.Text.12Secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/total_price" />

            <TextView
                android:id="@+id/tvOrderTotalOrder"
                style="@style/AppTheme.Text.14Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                tools:text="Ksh. 300" />

            <TextView
                android:id="@+id/tvCommentsLabelOrder"
                style="@style/AppTheme.Text.12Secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/additional_comments" />

            <TextView
                android:id="@+id/tvOrderCommentsOrder"
                style="@style/AppTheme.Text.14Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                tools:text="Lorem ipsum dolor sit amet" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorTextTertiary" />

            <TextView
                android:id="@+id/textView16"
                style="@style/AppTheme.Text.14PrimaryBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/payment_details" />

            <TextView
                android:id="@+id/textView21"
                style="@style/AppTheme.Text.12Secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/payment_method" />

            <TextView
                android:id="@+id/tvPaymentMethodOrder"
                style="@style/AppTheme.Text.14Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                tools:text="M-Pesa" />

            <TextView
                android:id="@+id/textView27"
                style="@style/AppTheme.Text.12Secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/payment_status" />

            <TextView
                android:id="@+id/tvPaymentStatusOrder"
                style="@style/AppTheme.Text.14Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                tools:text="Unpaid" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPayOrder"
                style="@style/AppTheme.Button.OutlinedAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/pay_now" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorTextTertiary" />

            <TextView
                style="@style/AppTheme.Text.14PrimaryBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/order_items" />

            <ProgressBar
                android:id="@+id/pbLoadingOrderItemsOrder"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:indeterminate="true" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvOrderItemsOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:nestedScrollingEnabled="false"
                android:visibility="gone"
                tools:itemCount="3"
                tools:listitem="@layout/item_cart_item"
                tools:visibility="visible" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>